# zigpeek

./: .gitignore  ARCHITECTURE.md  LICENSE  OTHER-ZIG-VERSIONS.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: bump-version.sh
skills/zig-0.15-to-0.16/: SKILL.md
skills/zigpeek/: SKILL.md
src/zigpeek/: builtins.py  cli.py  fetch.py  stdlib.py  version.py  wasm.py
src/zigpeek/_vendor/: main.wasm
tests/: conftest.py  test_builtins.py  test_cli.py  test_fetch.py  test_stdlib_smoke.py  test_version.py  test_wasm_abi.py  test_wasm_driver.py
tests/fixtures/: tiny-langref.html
