[project]
name = "zigpeek"
version = "0.4.0"
description = "Fast CLI for Zig 0.16 stdlib + Skill for coding agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "wasmtime>=25.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
# `uv tool install 'zigpeek[offline]'` pulls in the prefetched docs bundle,
# so first run needs no network. Pin is exact: the data wheel is built and
# published in lockstep with this one.
offline = ["zigpeek-offline==0.4.0"]

[project.urls]
Homepage = "https://github.com/TanGentleman/zigpeek"
Repository = "https://github.com/TanGentleman/zigpeek"
Issues = "https://github.com/TanGentleman/zigpeek/issues"

[project.scripts]
zigpeek = "zigpeek.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "zigpeek-offline",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
zigpeek-offline = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zigpeek"]

# Be explicit: the vendored WASM is part of the package, not just incidental
# files swept in by hatchling defaults. Keeps editable installs (`uv sync`),
# wheel builds (`uv build`), and future tool installs in lockstep.
[tool.hatch.build.targets.wheel.force-include]
"src/zigpeek/_vendor/main.wasm" = "zigpeek/_vendor/main.wasm"
